--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "mongodb": "^2.2.25"
+    "mongodb": "^2.2.25",
+    "mongoose": "^4.9.1"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
