Using 'Mocha' & 'Chai' to add test cases

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "keywords": [
     "mean"
   ],
-  "author": "Siddharth",
+  "author": "Siddharth Khobare",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/khobares/MEAN_application/issues"
@@ -24,7 +24,9 @@
     "angular": "^1.6.3",
     "angular-route": "^1.6.3",
     "body-parser": "^1.17.1",
+    "chai": "^3.5.0",
     "express": "^4.15.2",
+    "mocha": "^3.2.0",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1"
   },
