--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.15.2",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.25",
-    "mongoose": "^4.9.1"
+    "mongoose": "^4.9.1",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "mocha": "^3.2.0"
